es-data.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: efk
  name: elasticsearch-data
  labels:
    app: elasticsearch
    role: data
spec:
  serviceName: elasticsearch-data
  replicas: 3
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data  
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role				
                  operator: In
                  values:		
                  - data
              topologyKey: kubernetes.io/hostname			  
      containers:
      - name: elasticsearch-data
        securityContext:
          privileged: false
        image: docker.elastic.co/elasticsearch/elasticsearch-platinum:6.2.4
        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
        - containerPort: 9200
          name: http		  
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10		  
        volumeMounts:
        - name: storage
          mountPath: /usr/share/elasticsearch/data
          subPath: data
      terminationGracePeriodSeconds: 120	  
  volumeClaimTemplates:
  - metadata:
      name: storage        
    spec:
      accessModes: [ "ReadWriteOnce" ]      
      resources:
        requests:
          storage: 100Gi
