es-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: efk
  name: elasticsearch-master
  labels:
    app: elasticsearch
    role: master
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30  
  selector:
    matchLabels:
     app: elasticsearch
     role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role				
                  operator: In
                  values:		
                  - master
              topologyKey: kubernetes.io/hostname	  
      containers:
      - name: elasticsearch-master
        securityContext:
          privileged: false
        image: docker.elastic.co/elasticsearch/elasticsearch-platinum:6.2.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        - containerPort: 9200
          name: http
          protocol: TCP		  
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10	  
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: "storage"
      terminationGracePeriodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  namespace: efk
  name: es-master-transport
  labels:
    component: elasticsearch
    role: master
spec:
  selector:
    app: elasticsearch
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
  clusterIP: None  
---
apiVersion: v1
kind: Service
metadata:
  namespace: efk
  name: es-master-http
  labels:
    app: elasticsearch
    role: master
spec:
  selector:
    app: elasticsearch
    role: master
  ports:
  - name: http
    port: 9200
    protocol: TCP
