kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: morgan-elk
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
     app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:6.2.4
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: kibana
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: kibana
          initialDelaySeconds: 20
          periodSeconds: 10
      terminationGracePeriodSeconds: 60 		  
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: morgan-elk
  labels:
    app: kibana
spec:  
  selector:
    app: kibana
  ports:
  - name: http
    port: 5601
    targetPort: 5601
    protocol: TCP
